knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_User__c/pqcrush__Map_Member_User__c.object-meta.xml
<CustomObject>
    <label>Map Member User</label>
    <nameField>
        <displayFormat>MU-{0000}</displayFormat>
        <label>Map Member User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Member Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>