knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_User__c/fields/pqcrush__Email__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Email__c</fullName>
    <formula>pqcrush__User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>