knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_User__c/fields/pqcrush__FirstName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__FirstName__c</fullName>
    <formula>pqcrush__User__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>