knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_User__c/fields/pqcrush__FullName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__FullName__c</fullName>
    <formula>pqcrush__User__r.FirstName &amp; &quot; &quot; &amp; pqcrush__User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>