knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_User__c/fields/pqcrush__LastName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__LastName__c</fullName>
    <formula>pqcrush__User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>