knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_User__c/fields/pqcrush__ManagerId__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ManagerId__c</fullName>
    <formula>pqcrush__User__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManagerId</label>
    <type>Text</type>
</CustomField>